Make the dev process inspectable

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node-dev src"
+    "dev": "ts-node-dev --inspect -- src"
   },
   "dependencies": {
     "turntable-api": "*"
